--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -2,7 +2,8 @@ name: Metrics
 on:
   # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
-#  workflow_dispatch:
+  
+  workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
 #  push: {branches: ["master", "main"]}
 jobs:
