--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -36,7 +36,9 @@ jobs:
 
           plugin_achievements_threshold: C # (will show achievement tokens that are not yet unlocked)
           plugin_achievements_display: detailed  # detailed description of achievements tokens
-s
+          
+          plugin_calendar: yes # displays activity by year from current year onwards
+          plugin_calendar_limit: 4 # displays activity for 4  years
 
           plugin_habits: yes # daily and weekly activity
           plugin_habits_facts: yes # displays an analysis of your weekly activity
@@ -44,11 +46,6 @@ s
 
           plugin_licenses: yes # license information
           plugin_licenses_setup: npm ci # details of applicable licenses
-
-#          plugin_skyline: yes # skyline 3d activity plugin
-#          plugin_skyline_year: 2022 # what year
-#          plugin_skyline_frames: 120 # number of frames
-#          plugin_skyline_quality: 1 # quality 1 is best
 
           plugin_stargazers: yes # monthly activity
           plugin_stargazers_charts_type: chartist # activity type - smooth lines
