--- a/.github/workflows/Metriics2.yml
+++ b/.github/workflows/Metriics2.yml
@@ -4,8 +4,8 @@ on:
   schedule: [{cron: "0 0 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  #push: {branches: ["master", "main"]}
+  #(optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -15,6 +15,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          user: galaxybomb23
           
           committer_message: "update metrics"
           template: classic
@@ -33,9 +34,17 @@ jobs:
           plugin_languages: yes  # display of applied programming languages
           plugin_languages_details: bytes-size, percentage  # additional information about code size and percentage
           
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          pluging_habits_charts: yes 
+          
           plugin_achievements: yes
+          plugin_achievements_secrets: yes
           plugin_achievements_threshold: C # (will show achievement tokens that are not yet unlocked)
-          plugin_achievements_display: detailed  # detailed description of achievements tokens
+          plugin_achievements_display: compact  # detailed description of achievements tokens
+          
+          plugin_calendar: yes
+          plugin_calendar_limit: 2
           
           
           
