--- a/.github/workflows/Metriics2.yml
+++ b/.github/workflows/Metriics2.yml
@@ -1,11 +1,10 @@
 name: Metrics
 on:
-  # Schedule daily updates
+  # Schedule updates (each hour)
   schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  #(optional) Run workflow when pushing on master/main
-  #push: {branches: ["master", "main"]}
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -15,38 +14,62 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: galaxybomb23
-          
-          committer_message: "update metrics"
-          template: classic
-          base: header, activity, community, repositories, metadata  # basic content (user information
-          plugin_introduction: yes  # general account information
-          
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          
-          plugin_lines: yes
-          plugin_lines_sections: repositories, history
 
-          plugin_leetcode: yes
-          plugin_leetcode_sections: solved, skills, recent
+          # Options
+          user: galaxybomb23
+          template: classic
+          base: header, activity, community, repositories, metadata
+          base_indepth: yes
           
-          plugin_languages: yes  # display of applied programming languages
-          plugin_languages_details: bytes-size, percentage  # additional information about code size and percentage
+          config_timezone: America/Indianapolis
           
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          pluging_habits_charts: yes 
-          
+          #Achievements
           plugin_achievements: yes
+          plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C # (will show achievement tokens that are not yet unlocked)
-          plugin_achievements_display: compact  # detailed description of achievements tokens
+          plugin_achievements_threshold: C
           
+          #Calendar
           plugin_calendar: yes
           plugin_calendar_limit: 2
           
+          #Coding habits
+          plugin_habits: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           
+          #Intro
+          plugin_introduction: yes
+          plugin_introduction_title: yes
           
+          # code for ISO calendar
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          
+          #Code for languages          
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          
+          #leetcode
+          plugin_leetcode: yes
+          plugin_leetcode_limit_recent: 0
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved
+          plugin_leetcode_user: .user.login
+          
+          #retry when fail
           retries: 3
           retries_delay: 300
